--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
     "pg": "^8.6.0",
     "socket.io": "^4.1.2"
   }
