--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ultimate-coders/hexagon#readme",
   "dependencies": {
+    "aws-sdk": "^2.927.0",
     "base-64": "^1.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -27,6 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "pg": "^8.6.0",
     "socket.io": "^4.1.2"
   }
