--- a/package.json
+++ b/package.json
@@ -28,15 +28,19 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.6.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "form-data": "^3.0.1",
+    "fs": "^0.0.1-security",
     "jest": "^27.0.4",
     "supertest": "^6.1.3"
   }
