--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Authors",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test": "jest --verbose --coverage"
   },
   "repository": {
