--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.3.4",
